--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     style="background-image: url(https://images.unsplash.com/photo-1610809376778-928ee2c3a561?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D); background-size: cover; background-position:center ;">
 
                     <div class="content">
-                        <div class="name">BMW M4</div>
+                        <div class="name">BMW BMW</div>
                         <div class="desc">The 2024 BMW M4 Coupe delivers signature pulse-pounding BMW M performance and
                             aesthetics to match.
                         </div>
